# simple-kvm

./: .gitignore  README.md  installer.iss  platformio.ini  pyproject.toml  simple-kvm.spec  test_ci.ps1
.github/workflows/: build.yml
app/: __main__.py  main.py  requirements.txt
app/core/: capture.py  input_hook.py  keymap.py  protocol.py  serial_comm.py
app/ui/: mainwindow.py  settings_dialog.py
docs/: hardware.md  installer.md  protocol.md  setup.md
firmware/bluepill1/: bluepill1.ino  main.cpp  packet_parser.cpp  packet_parser.h
firmware/bluepill2/: bluepill2.ino  hid_handler.cpp  hid_handler.h  main.cpp  packet_parser.cpp  packet_parser.h  usbd_desc_patch.c  usbd_ep_conf_patch.h  usbd_hid_composite_patch.c  usbd_hid_composite_patch.h
firmware/common/: packet_parser.cpp  packet_parser.h
installer_resources/: license.txt
tests/: test_input_hook.py  test_keymap.py  test_keymap_log.py
