[project]
name = "simple-kvm"
version = "0.1.0"
description = "DIY KVM switch with BluePill + Python GUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "fnchoco"},
]
keywords = ["kvm", "bluepill", "stm32", "usb-hid"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
]

[project.scripts]
simple-kvm = "app.main:main"

[project.gui-scripts]
simple-kvm-gui = "app.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8,<10.0.0",
]
build = [
    "pyinstaller>=6.0,<7.0.0",
    "pyinstaller-hooks-contrib>=2024.0,<2027.0",
]

[tool.pyinstaller]
# PyInstaller base settings (overridden by .spec file for complex builds)
scripts = ["app/__main__.py"]
name = "simple-kvm"
onefile = false
windowed = true
noupx = true
clean = true

[tool.pytest.ini_options]
testpaths = ["tests"]
